# SketchBot_clubHacks26

./: .gitignore  .mcp.json  AGENTS.md  HOTSPOT_STARTUP_CHECKLIST.txt  README.md  TODO.md  package-lock.json  package.json  render.yaml
.claude/: settings.local.json
.github/workflows/: release-desktop.yml
apps/admin-web/: .env.example  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/companion/: App.tsx  README.md  app.json  metro.config.js  package-lock.json  package.json
apps/desktop/: README.md  package-lock.json  package.json
assets/apriltags/: README.md  layout.canvas.json  manifest.json
backend/: README.md  requirements.txt
backend/app/: main.py
backend/data/: tasks.json
blender/: COMPONENTS.md  README.md  STARTUP.md
companion-app/: App.tsx  README.md  app.json  package-lock.json  package.json
docs/: architecture.md  auth-architecture.md  eas-dev-builds.md  implementation-roadmap.md  payments-stripe-setup.md  privacy-tutor-observe.md  spark-rive-upgrade.md  spark-state-images.md  testing-plan.md  validation-checklist.md  webrtc-implementation-roadmap.md  webrtc-video-architecture.md
docs/agents/: README.md  backend.md  firmware.md  relay-policy.md  supervisor.md  task-assignment-template.md  test.md  webapp.md
docs/contracts/: backend-api.md  phone-webrtc.md  (+2 more)
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/main/: CMakeLists.txt  idf_component.yml  main.c
scripts/: build-prod.sh  generate_apriltags.py
webapp/: README.md  middleware.ts  package-lock.json  package.json
(+389 files in other folders)
